# AgentForge

./: .env.example  .gitignore  MANIFEST.in  README.md  README_ZH.md  pyproject.toml  requirements.txt
docs/: api-reference.md  datasources.md  deployment.md  development.md  hybrid-search.md
skills/: search-knowledge.md  upload-document.md
src/api/: main.py
src/api/routes/: admin.py  auth_routes.py  collections.py  config_export.py  datasources.py  documents.py  me.py  pages.py  search.py
src/core/: auth.py  bm25.py  chroma_vector_store.py  config.py  database.py  deps.py  document_processor.py  embeddings.py  models.py  pg_vector_store.py  reranker.py  scheduler.py  vector_store.py
src/core/connectors/: __init__.py  clickhouse_connector.py  confluence_connector.py  dingtalk_connector.py  doris_connector.py  elasticsearch_connector.py  feishu_connector.py  github_connector.py  gitlab_connector.py  google_drive_connector.py  hive_connector.py  huawei_obs_connector.py  mongodb_connector.py  notion_connector.py  oceanbase_connector.py  oracle_connector.py  oss_connector.py  s3_connector.py  sharepoint_connector.py  snowflake_connector.py  sql_connector.py  sqlserver_connector.py  tencent_cos_connector.py  tencent_docs_connector.py  tidb_connector.py  yuque_connector.py
src/mcp/: server.py
src/templates/: base.html  chunks.html  dashboard.html  search_page.html
src/templates/admin/: index.html  users.html
templates/: base.html  chunks.html  dashboard.html  datasources.html  export.html  login.html  search_page.html  upload.html
templates/admin/: settings.html
tests/: conftest.py  test_admin.py  test_auth.py  test_chunking.py  test_core.py  test_datasources.py  test_documents.py  test_e2e.py  test_embedding_switch.py  test_extended_datasources.py  test_hybrid_search.py  test_new_datasources.py  test_search.py  test_search_all.py
