[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentf"
version = "0.1.0"
description = "Vector-based knowledge platform with MCP server for AI agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "python-multipart>=0.0.9",
    "mcp>=1.0.0",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.27.0"]

[project.scripts]
agentf-api = "src.api.main:run"
agentf-mcp = "src.mcp.server:run"

[tool.setuptools.packages.find]
where = ["."]
